  (Christian)
- Fixed leaks in openssl_csr_sign and openssl_csr_new (Pierre)
- Fixed phpinfo() cutoff of variables at \0. (Ilia)
- Fixed a bug in the filter extension that prevented magic_quotes_gpc from 
  being applied when RAW filter is used. (Ilia)
- Fixed memory leaks in openssl streams context options. (Pierre)
- Fixed handling of extremely long paths inside tempnam() function. (Ilia)
- Fixed bug #39304 (Segmentation fault with list unpacking of string offset).
  (Dmitry)
- Fixed bug #39192 (Not including nsapi.h properly with SJSWS 7). This will
  make PHP 5.2 compatible to new Sun Webserver. (Uwe)
- Fixed bug #39140 (Uncaught exception may cause crash). (Dmitry)
- Fixed bug #39125 (Memleak when reflecting non-existing class/method). (Tony)
- Fixed bug #39067 (getDeclaringClass() and private properties). (Tony)
- Fixed bug #39039 (SSL: fatal protocol error when fetching HTTPS from servers
  running Google web server). (Ilia)
- Fixed bug #39035 (Compatibility issue between DOM and
  zend.ze1_compatibility_mode). (Rob)
- Fixed bug #39034 (curl_exec() with return transfer returns TRUE on empty
  files). (Ilia)
- Fixed bug #39032 (strcspn() stops on null character). (Tony)
- Fixed bug #39020 (PHP in FastCGI server mode crashes). (Dmitry)
- Fixed bug #39017 (foreach(($obj = new myClass) as $v); echo $obj;
  segfaults). (Dmitry)
- Fixed bug #39004 (Fixed generation of config.nice with autoconf 2.60). (Ilia)
- Fixed bug #39003 (__autoload() is called for type hinting). (Dmitry, Tony)
- Fixed bug #39001 (ReflectionProperty returns incorrect declaring class for
  protected properties). (Tony)
- Fixed bug #38996 (PDO_MYSQL doesn't check connections for liveness). (Tony)
- Fixed bug #38993 (Fixed safe_mode/open_basedir checks for session.save_path,
  allowing them to account for extra parameters). (Ilia)
- Fixed bug #38989 (Absolute path with slash at beginning doesn't work on win).
  (Dmitry)
- Fixed bug #38985 (Can't cast COM objects). (Wez)